# rust-Kafka-microservices-simulador

./: README.md
nest-api/: .env.example  .gitignore  Dockerfile  app.http  docker-compose.yaml  package-lock.json  package.json  tsconfig.json
nest-api/.docker/: entrypoint.sh
nest-api/.docker/mongo/: init.js
nest-api/src/: app.module.ts  app.service.ts  main.ts
nest-api/src/routes/: routes.controller.ts  routes.gateway.ts  routes.module.ts  routes.service.ts
nest-api/src/routes/entities/: route.entity.ts
react-frontend/: .env.example  Dockerfile  docker-compose.yaml  package-lock.json  package.json
react-frontend/.docker/: entrypoint.sh
react-frontend/public/: index.html
react-frontend/src/: App.tsx  theme.ts
react-frontend/src/components/: Mapping.tsx  Navbar.tsx
react-frontend/src/errors/: route-exists.error.ts
react-frontend/src/util/: geolocation.ts  map.ts  models.ts
simulador-aluno/: Dockerfile  docker-compose.yaml  go.mod  go.sum  main.go
simulador-aluno-rust/: Dockerfile  docker-compose.yaml  ex_dockerfile
simulador-aluno-rust/.docker/kafka/: docker-compose.yaml
simulador-aluno-rust/simulador/: Cargo.toml
simulador-aluno-rust/simulador/src/: main.rs
simulador-aluno-rust/simulador/src/application/: kafka_produce.rs  mod.rs  route.rs
simulador-aluno-rust/simulador/src/infra/kafka/: consumer.rs  producer.rs
simulador-aluno/application/kafka/: produce.go
simulador-aluno/application/route/: route.go
simulador-aluno/infra/kafka/: consumer.go  producer.go
