[package]
name = "simulador"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
env_logger = "0.9.0"
log = "0.4.14"
dotenv = "0.15.0"
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["full"] }

[dependencies.rdkafka]
version = "0.28.0"
features = ["ssl", "sasl"]
